--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "ethjs-provider-http": "^0.1.6",
     "ethjs-provider-signer": "^0.1.4",
     "mocha": "^6.0.2"
   }
